# lecture-type-classes

./: README.md  lecture-type-classes.cabal  lecture10.cabal  lecture5.cabal
src/: Lecture.hs  Lecture5.hs
